# mupattern

./: .firebaserc  .gitignore  AGENTS.md  Cargo.toml  README.md  firebase.json  package.json  pyproject.toml
.github/workflows/: release-mupattern.yml
examples/: expression_pos0_bbox.csv  expression_pos0_config.yaml  expression_pos1_bbox.csv  expression_pos1_config.yaml  kill_pos140_bbox.csv  kill_pos140_config.yaml  kill_pos150_annotation.csv  kill_pos150_bbox.csv  kill_pos150_config.yaml  kill_pos156_bbox.csv  kill_pos156_config.yaml
muexpression/: core.py  main.py  pyproject.toml
muexpression/gui/: __init__.py  app.py
muexpression/src/muexpression/: __init__.py  cli.py  gui.py
mufile/: main.py  pyproject.toml
mufile/gui/: __init__.py  app.py
mufile/src/mufile/: __init__.py  cli.py  core.py  gui.py
mufile/tests/: test_parse_slice_string.py
mukill/: core.py  main.py  pyproject.toml
mukill/gui/: __init__.py  app.py
mukill/src/mukill/: __init__.py  cli.py  gui.py
mupattern/: index.html  package.json
mupattern-crop/: Cargo.toml
mupattern-crop/src/: crop.rs  main.rs  zarr.rs
mupattern-desktop/: .gitignore  package.json  tsconfig.electron.json  vite.config.ts
mupattern-desktop/electron/: kill-inference.ts  main.cts  preload.cts
mupattern-desktop/src/: App.tsx  index.css  main.tsx  mupattern-desktop-env.d.ts
mupattern-desktop/src-tauri/: Cargo.toml  tauri.conf.json
mupattern-desktop/src-tauri/icons/: icon.icns
mupattern-desktop/src-tauri/src/: main.rs
mupattern-desktop/src-tauri/src/backend/: application.rs  common.rs  mod.rs  tasks.rs  workspace.rs  zarr_api.rs
mupattern-desktop/src/application/: ApplicationApp.tsx
mupattern-desktop/src/application/expression/: ExpressionLeftSidebar.tsx  ExpressionTab.tsx  types.ts
mupattern-desktop/src/application/kill/: KillLeftSidebar.tsx  KillTab.tsx
mupattern-desktop/src/application/tissue/: TissueLeftSidebar.tsx  TissueTab.tsx
mupattern-desktop/src/lib/: desktop-bridge.ts  load-tif.ts  slices.ts  tags-yaml.ts  tauri-bridge.ts  tiff-decode.worker.ts  workspace-tags.ts
mupattern-desktop/src/register/: RegisterApp.tsx  store.ts
mupattern-desktop/src/register/components/: CalibrationControls.tsx  Landing.tsx  LeftSliceSidebar.tsx  PatternEditor.tsx  Sidebar.tsx  TransformEditor.tsx  UnifiedCanvas.tsx
mupattern-desktop/src/register/lib/: bbox-csv.ts  normalize.ts  normalize.worker.ts  workspace-image.ts
mupattern-desktop/src/see/: SeeApp.tsx  store.ts
mupattern-desktop/src/see/components/: CropTile.tsx  Landing.tsx  LeftSliceSidebar.tsx  Viewer.tsx
mupattern-desktop/src/see/hooks/: useZarrStore.ts
mupattern-desktop/src/see/lib/: frame-loader.ts  zarr.ts
mupattern-desktop/src/tasks/: TasksDashboardPage.tsx
mupattern-desktop/src/tasks/components/: ConvertTaskConfigModal.tsx  CropTaskConfigModal.tsx  ExpressionTaskConfigModal.tsx  KillTaskConfigModal.tsx  (+2 more)
mupattern-desktop/src/workspace/: WorkspaceDashboard.tsx  store.ts
mupattern-desktop/test/: frame-loader.test.ts  zarr.test.ts
mupattern-py/: pyproject.toml
mupattern-py/src/mupattern_py/: __init__.py
mupattern-py/src/mupattern_py/apps/: __init__.py
mupattern-py/src/mupattern_py/apps/convert/: __init__.py  core.py
mupattern-py/src/mupattern_py/apps/crop/: __init__.py  core.py
mupattern-py/src/mupattern_py/apps/expression/: core.py
mupattern-py/src/mupattern_py/apps/kill/: core.py
mupattern-py/src/mupattern_py/apps/spot/: core.py
mupattern-py/src/mupattern_py/apps/tissue/: core.py
mupattern-py/src/mupattern_py/cli/: convert.py  crop.py  dataset.py  expression.py  kill.py  main.py  movie.py  plot.py  spot.py  tissue.py  train.py
mupattern-py/src/mupattern_py/common/: config.py  errors.py  io_csv.py  io_zarr.py  nd2_utils.py  progress.py  slices.py
mupattern-rs/: Cargo.toml
mupattern-rs/src/: convert.rs  crop.rs  expression.rs  kill.rs  lib.rs  main.rs  movie.rs  rpc.rs  slices.rs  spot.rs  tissue.rs  zarr.rs
mupattern-web/: index.html  package.json  tsconfig.json  vite.config.ts
mupattern-web/src/: App.tsx  Download.tsx  Landing.tsx  Tools.tsx  index.css
mupattern-web/src/lib/: load-image.ts  load-tif.ts  see-session.ts
mupattern-web/src/register/: RegisterApp.tsx  store.ts
mupattern-web/src/see/: SeeApp.tsx  store.ts
mupattern-web/src/store/: mupattern-store.ts
mupattern/src/: App.tsx  Landing.tsx  index.css
mupattern/src/components/: AppHeader.tsx  ThemeProvider.tsx  ThemeToggle.tsx
mupattern/src/lib/: idb-handle.ts  load-image.ts  load-tif.ts  see-session.ts
mupattern/src/register/: RegisterApp.tsx  store.ts
mupattern/src/see/: SeeApp.tsx  store.ts
mupattern/src/store/: mupattern-store.ts
mupattern/src/workspace/: WorkspaceDashboard.tsx  WorkspaceLanding.tsx  store.ts
muregister/: index.html  package-lock.json  package.json
muregister/src/: App.tsx  main.tsx  store.ts  types.ts
muregister/src/components/: CalibrationControls.tsx  ExportButton.tsx  Header.tsx  Landing.tsx  PatternEditor.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TransformEditor.tsx  UnifiedCanvas.tsx
muregister/src/lib/: autodetect.ts  units.ts
musee/: index.html  package.json
musee/src/: App.tsx  index.css  store.ts
musee/src/components/: CropTile.tsx  PositionPicker.tsx  ThemeProvider.tsx  Viewer.tsx
musee/src/hooks/: useZarrStore.ts
musee/src/lib/: annotations.ts  directory-store.ts  idb-handle.ts  persist.ts  render.ts  zarr.ts
muspot/: main.py  pyproject.toml
muspot/gui/: __init__.py  app.py
muspot/src/muspot/: __init__.py  cli.py  core.py  gui.py
mustudio/: package.json
mustudio/electron/: main.cts  preload.cts
mustudio/src/: App.tsx  mustudio-env.d.ts
mustudio/src/components/: AppHeader.tsx
mustudio/src/lib/: load-tif.ts  slices.ts  tiff-decode.worker.ts
mustudio/src/register/: RegisterApp.tsx  store.ts
mustudio/src/see/: SeeApp.tsx  store.ts
mustudio/src/workspace/: WorkspaceDashboard.tsx  store.ts
mustudio/test/: frame-loader.test.ts  zarr.test.ts
onnx_models/: README.md
shared/: package.json
shared/src/components/: HexBackground.tsx
(+63 files in other folders)
