[project]
name = "muexpression"
version = "0.1.0"
description = "Measure fluorescence expression in micropattern crops"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "numpy>=1.26",
    "zarr>=2.16,<3",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "customtkinter>=5.0",
]

[project.scripts]
muexpression = "muexpression.cli:app"
muexpression-gui = "muexpression.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/muexpression"]
