[project]
name = "mupattern-py"
version = "0.1.0"
description = "Unified micropattern backend CLI (reference implementation). Prod uses mupattern-desktop with Rust + ONNX."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "numpy>=1.26",
  "tifffile>=2024.1",
  "zarr>=3,<4",
  "nd2>=0.10",
  "imageio>=2.31",
  "imageio-ffmpeg>=0.4",
  "matplotlib>=3.8",
  "pandas>=2.0",
  "datasets>=3.0",
  "Pillow>=10.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.40",
  "accelerate>=1.1.0",
  "evaluate>=0.4",
  "scikit-learn>=1.4",
  "spotiflow>=0.5",
  "cellpose>=4.0",
  "optimum[onnxruntime]>=1.20",
  "cellSAM @ git+https://github.com/vanvalenlab/cellSAM.git",
  "scikit-image>=0.22",
]

[project.scripts]
mupattern = "mupattern_py.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }

[tool.hatch.build.targets.wheel]
packages = ["src/mupattern_py"]
