[package]
name = "mupattern-rs"
version = "0.3.3"
edition = "2021"
description = "Rust CLI for mupattern: crop, expression, movie"

[features]
default = ["cuda"]
cuda = ["ort/cuda"]

[[bin]]
name = "mupattern"
path = "src/main.rs"

[dependencies]
cellpose-rs = { git = "https://github.com/keejkrej/cellpose-rs" }
spotiflow-rs = { git = "https://github.com/keejkrej/spotiflow-rs" }
cellsam-rs = { git = "https://github.com/keejkrej/cellsam-rs" }
clap = { version = "4", features = ["derive"] }
nd2-rs = "0.1.2"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "copy-dylibs"] }
tiff = "0.11"
image = "0.25"
zarrs = { version = "0.23", default-features = false, features = ["filesystem", "blosc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
csv = "1"
