[package]
name = "mupattern-rs"
version = "0.3.5"
edition = "2021"
description = "Rust CLI for mupattern killing-assay workflows"

[features]
default = ["cuda"]
cuda = ["ort/cuda"]

[[bin]]
name = "mupattern"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nd2-rs = "0.1.6"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "copy-dylibs"] }
tiff = "0.11"
image = "0.25"
zarrs = { version = "0.23", default-features = false, features = ["filesystem", "blosc", "sharding", "crc32c", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
