[project]
name = "muspot"
version = "0.1.0"
description = "Detect fluorescent spots in micropattern crops using spotiflow"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "numpy>=1.26",
    "zarr>=2.16,<3",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "spotiflow>=0.5",
    "customtkinter>=5.0",
]

[project.scripts]
muspot = "main:app"
muspot-gui = "gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
