[project]
name = "muspot"
version = "0.1.0"
description = "Detect fluorescent spots in micropattern crops using spotiflow"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "numpy>=1.26",
    "zarr>=2.16,<3",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "torch>=2.0",
    "torchvision>=0.15",
    "spotiflow>=0.5",
    "customtkinter>=5.0",
]

[project.scripts]
muspot = "muspot.cli:app"
muspot-gui = "muspot.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }

[tool.hatch.build.targets.wheel]
packages = ["src/muspot"]
