[package]
name = "mupattern-desktop"
version = "0.3.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
once_cell = "1"
regex = "1"
tiff = "0.9"
ffmpeg-sidecar = "2.4"
mupattern-rs = { path = "../../mupattern-rs" }
